--- a/index.html
+++ b/index.html
@@ -687,7 +687,11 @@ Author: Kamleshyadav
 	</div>
 
 <!-- gallery section end -->
-
+<div class="col-xs-12 map-container">
+	<div id="id_gmap" data-content-shortcode="mesmerize_maps zoom=&quot;70&quot; address=&quot;ул. Машерова 11, Минск&quot;" data-editable="true" class="map-responsive">
+		<iframe class="mesmerize-google-maps mesmerize-frame-map" src="https://maps.google.com/maps?q=ул. Машерова 11, Минск&amp;z=15&amp;t=m&amp;output=embed&amp;iwloc=near" frameborder="0"></iframe>
+	</div>	
+</div>
 	<div class="main_wrapper nc_subscribe_section">
 		<div class="container">
 			<div class="row">
