--- a/index.html
+++ b/index.html
@@ -687,6 +687,20 @@ Author: Kamleshyadav
 	</div>
 
 <!-- gallery section end -->
+<div class="main_wrapper blue-magnet">
+	<div class="container">
+		<div class="row">
+			<div class="col-sm-8">
+				<h2 class="magnet-title">Первое занятие бесплатно!</h2>
+				<p class="magnet-subtitle">Запишись по телефону <span class="magnet-phone-number">123-45-67</span></p>
+			</div>
+			<div class="col-sm-4">
+				<a class="get-started-btn">Запишись на пробное занятие</a>
+			</div>
+		</div>
+	</div>
+</div>
+
 <div class="col-xs-12 map-container">
 	<div id="id_gmap" data-content-shortcode="mesmerize_maps zoom=&quot;70&quot; address=&quot;ул. Машерова 11, Минск&quot;" data-editable="true" class="map-responsive">
 		<iframe class="mesmerize-google-maps mesmerize-frame-map" src="https://maps.google.com/maps?q=ул. Машерова 11, Минск&amp;z=15&amp;t=m&amp;output=embed&amp;iwloc=near" frameborder="0"></iframe>
