Fix menu links position

--- a/index.html
+++ b/index.html
@@ -153,8 +153,8 @@ Author: Kamleshyadav
 					 </div>
 					 <div class="nc_navigations">
 						 <ul class="menu">
-								<li class="active align-middle"><a href="index.html">Главная</a></li>
-								<li><a class="disabled" href="#">Услуги</a>
+								<li class="active align-middle menu-el"><a href="index.html">Главная</a></li>
+								<li class="menu-el"><a class="disabled" href="#">Услуги</a>
 								 <ul class="sub-menu">
 								   <li><a href="studio.html">Студия</a></li>
 										<li><a href="school.html">Школа</a></li>
@@ -170,7 +170,7 @@ Author: Kamleshyadav
 								<!-- <li><a href="blog-category.html">Блог</a> -->
 									
 								</li>
-								<li><a href="conatct-us.html">Контакты</a></li>
+								<li class="menu-el"><a href="conatct-us.html">Контакты</a></li>
 								<li>
 									<button type="button" data-toggle="modal" data-target="#callbackModal" class="triangle_btn">Заказать сейчас</button>
 								</li>
@@ -695,7 +695,9 @@ Author: Kamleshyadav
 				<p class="magnet-subtitle">Запишись по телефону <span class="magnet-phone-number">123-45-67</span></p>
 			</div>
 			<div class="col-sm-4">
-				<a class="get-started-btn">Запишись на пробное занятие</a>
+				<a href='' class="get-started-btn" data-toggle="modal" data-target="#callbackModal">
+					Запишись на пробное занятие
+				</a>
 			</div>
 		</div>
 	</div>
