--- a/index.html
+++ b/index.html
@@ -40,6 +40,24 @@ Author: Kamleshyadav
   </div>
  </div>
  <!--  preloader start -->
+ <div class="main_wrapper top-menu">
+	<div class="container">
+		<div class="row">
+			<div class="col-sm-3">
+				<p class="text-center mobile-hidden">Ежедневно с 8:00 до 20:00</p>
+			</div>
+			<div class="col-sm-9">
+				<div class="col-sm-2 mobile-hidden"></div>
+				<div class="col-sm-1 mobile-hidden">+3752912312312</div>
+				<div class="col-sm-1 mobile-hidden"></div>
+				<div class="col-sm-1 mobile-hidden">+3752912312312</div>
+				<div class="col-sm-1 mobile-hidden"></div>
+				<a href='' class="col-sm-6 text-center phone-request" data-toggle="modal" data-target="#callbackModal">ЗАКАЗАТЬ ОБРАТНЫЙ ЗВОНОК</a>
+			</div>
+		</div>
+	</div>
+</div>
+
   <!--  header start -->
  <div class="main_wrapper nc_header_main_home1">
     <!-- slider start -->
