Add features section

--- a/index.html
+++ b/index.html
@@ -704,6 +704,89 @@ Author: Kamleshyadav
 	</div><!--  photo gallery main -->
 	</div>
 
+	<div class="main_wrapper features">
+		<div class="container">
+			<h2 class="text-center">НАШИ ПРЕИМУЩЕСТВА</h2>
+			<div class="row">	
+				<div class="col-sm-4">
+					<div class="card">
+						<div class="card-body">
+							<div class="col-sm-2">
+								<i class="fa fa-check-circle"></i>
+							</div>
+							<div class="col-sm-4">
+								<h3 class="card-title">ПРОФЕССИОНАЛЬНОЕ ОБОРУДОВАНИЕ</h3>
+								<p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+							</div>
+						</div>
+					</div>
+				</div>
+				<div class="col-sm-1"></div>
+				<div class="col-sm-4">
+					<div class="card">
+						<div class="card-body">
+							<div class="col-sm-2">
+								<i class="fa fa-check-circle"></i>
+							</div>
+							<div class="col-sm-4">
+								<h3 class="card-title">НАСТОЯЩАЯ КОМАНДА ПРОФИ</h3>
+								<p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+							</div>
+						</div>
+					</div>
+				</div>
+			</div>
+			<div class="row">
+				<div class="col-sm-4">
+					<div class="card">
+						<div class="card-body">
+							<div class="col-sm-2">
+								<i class="fa fa-check-circle"></i>
+							</div>
+							<div class="col-sm-4">
+								<h3 class="card-title">С НАМИ УДОБНО</h3>
+								<p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+							</div>
+						</div>
+					</div>
+				</div>
+				<div class="col-sm-1"></div>
+				<div class="col-sm-4">
+					<div class="card">
+						<div class="card-body">
+							<div class="col-sm-2">
+								<i class="fa fa-check-circle"></i>
+							</div>
+							<div class="col-sm-4">
+								<h3 class="card-title">ДЕНЬГИ НЕ ПРОБЛЕМА</h3>
+								<p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+							</div>
+						</div>
+					</div>
+				</div>
+			</div>
+			<!-- <div class="row">
+				<div class="col-sm-4">
+					<div class="card">
+						<div class="card-body">
+							<h3 class="card-title">Card title</h3>
+							<p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+						</div>
+					</div>
+				</div>
+				<div class="col-sm-1"></div>
+				<div class="col-sm-4">
+					<div class="card">
+						<div class="card-body">
+							<h3 class="card-title">Card title</h3>
+							<p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+						</div>
+					</div>
+				</div>
+			</div> -->
+		</div>
+	</div>
+
 <!-- gallery section end -->
 <div class="main_wrapper blue-magnet">
 	<div class="container">
