Update features block

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@ Author: Kamleshyadav
   </div>
  </div>
  <!--  preloader start -->
- <div class="main_wrapper top-menu">
+ <!-- <div class="main_wrapper top-menu">
 	<div class="container">
 		<div class="row">
 			<div class="col-sm-3">
@@ -56,7 +56,7 @@ Author: Kamleshyadav
 			</div>
 		</div>
 	</div>
-</div>
+</div> -->
 
   <!--  header start -->
  <div class="main_wrapper nc_header_main_home1">
@@ -708,27 +708,27 @@ Author: Kamleshyadav
 		<div class="container">
 			<h2 class="text-center">НАШИ ПРЕИМУЩЕСТВА</h2>
 			<div class="row">	
-				<div class="col-sm-4">
+				<div class="col-sm-6">
 					<div class="card">
 						<div class="card-body">
-							<div class="col-sm-2">
+							<div class="col-sm-2 mobile-hidden">
 								<i class="fa fa-check-circle"></i>
 							</div>
-							<div class="col-sm-4">
+							<div class="col-sm-10">
 								<h3 class="card-title">ПРОФЕССИОНАЛЬНОЕ ОБОРУДОВАНИЕ</h3>
 								<p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
 							</div>
 						</div>
 					</div>
 				</div>
-				<div class="col-sm-1"></div>
-				<div class="col-sm-4">
+				<!-- <div class="col-sm-1"></div> -->
+				<div class="col-sm-6">
 					<div class="card">
 						<div class="card-body">
-							<div class="col-sm-2">
+							<div class="col-sm-2 mobile-hidden">
 								<i class="fa fa-check-circle"></i>
 							</div>
-							<div class="col-sm-4">
+							<div class="col-sm-10">
 								<h3 class="card-title">НАСТОЯЩАЯ КОМАНДА ПРОФИ</h3>
 								<p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
 							</div>
@@ -737,27 +737,26 @@ Author: Kamleshyadav
 				</div>
 			</div>
 			<div class="row">
-				<div class="col-sm-4">
+				<div class="col-sm-6">
 					<div class="card">
 						<div class="card-body">
-							<div class="col-sm-2">
+							<div class="col-sm-2 mobile-hidden">
 								<i class="fa fa-check-circle"></i>
 							</div>
-							<div class="col-sm-4">
+							<div class="col-sm-10">
 								<h3 class="card-title">С НАМИ УДОБНО</h3>
 								<p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
 							</div>
 						</div>
 					</div>
 				</div>
-				<div class="col-sm-1"></div>
-				<div class="col-sm-4">
+				<div class="col-sm-6">
 					<div class="card">
 						<div class="card-body">
-							<div class="col-sm-2">
+							<div class="col-sm-2 mobile-hidden">
 								<i class="fa fa-check-circle"></i>
 							</div>
-							<div class="col-sm-4">
+							<div class="col-sm-10">
 								<h3 class="card-title">ДЕНЬГИ НЕ ПРОБЛЕМА</h3>
 								<p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
 							</div>
@@ -765,25 +764,6 @@ Author: Kamleshyadav
 					</div>
 				</div>
 			</div>
-			<!-- <div class="row">
-				<div class="col-sm-4">
-					<div class="card">
-						<div class="card-body">
-							<h3 class="card-title">Card title</h3>
-							<p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-						</div>
-					</div>
-				</div>
-				<div class="col-sm-1"></div>
-				<div class="col-sm-4">
-					<div class="card">
-						<div class="card-body">
-							<h3 class="card-title">Card title</h3>
-							<p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-						</div>
-					</div>
-				</div>
-			</div> -->
 		</div>
 	</div>
 
