--- a/index.html
+++ b/index.html
@@ -40,23 +40,27 @@ Author: Kamleshyadav
   </div>
  </div>
  <!--  preloader start -->
- <!-- <div class="main_wrapper top-menu">
+ <div class="main_wrapper top-menu">
 	<div class="container">
 		<div class="row">
 			<div class="col-sm-3">
-				<p class="text-center mobile-hidden">Ежедневно с 8:00 до 20:00</p>
+				<p class="text-center mobile-hidden">Машерова 17/4</p>
+				<p class="text-center mobile-hidden" style="margin-top: -10px">Ежедневно с 8:00 до 20:00</p>
 			</div>
 			<div class="col-sm-9">
-				<div class="col-sm-2 mobile-hidden"></div>
-				<div class="col-sm-1 mobile-hidden">+3752912312312</div>
+				<div class="col-sm-4 mobile-hidden"></div>
+				<div class="col-sm-1 mobile-hidden">
+					<p>+3752912312312</p>
+					<p style="margin-top: -10px">+3752912312312</p>
+				</div>
 				<div class="col-sm-1 mobile-hidden"></div>
-				<div class="col-sm-1 mobile-hidden">+3752912312312</div>
-				<div class="col-sm-1 mobile-hidden"></div>
-				<a href='' class="col-sm-6 text-center phone-request" data-toggle="modal" data-target="#callbackModal">ЗАКАЗАТЬ ОБРАТНЫЙ ЗВОНОК</a>
+				<div class="col-sm-6" style="margin-top: 20px">
+					<a href='' class="phone-request text-center" data-toggle="modal" data-target="#callbackModal">ЗАКАЗАТЬ ОБРАТНЫЙ ЗВОНОК</a>
+				</div>
 			</div>
 		</div>
 	</div>
-</div> -->
+</div>
 
   <!--  header start -->
  <div class="main_wrapper nc_header_main_home1">
@@ -153,14 +157,14 @@ Author: Kamleshyadav
 	 <div class="main_wrapper wrapper_navigation nc_home_1">
 		 <div class="container">
 			 <div class="row">
-				 <div class="col-lg-3 col-md-3 col-sm-4">
+				 <div class="col-lg-2 col-md-2 col-sm-4">
 					 <div class="nc_logo">
 					  <a href="index.html">
 						 <img src="images/icon/brand_mova_white.png" alt="logo">
 					 </a>
 					 </div>
 				 </div>
-				 <div class="col-lg-9 col-md-9 col-sm-8" id="navigation_main">
+				 <div class="col-lg-10 col-md-10 col-sm-8" id="navigation_main">
 				  <div class="navigation_main">
 					 <div class="navbar_header"> 
 						 <div class="navbar_toggle"> 
@@ -172,22 +176,9 @@ Author: Kamleshyadav
 					 <div class="nc_navigations">
 						 <ul class="menu">
 								<li class="active align-middle menu-el"><a href="index.html">Главная</a></li>
-								<li class="menu-el"><a class="disabled" href="#">Услуги</a>
-								 <ul class="sub-menu">
-								   <li><a href="studio.html">Студия</a></li>
-										<li><a href="school.html">Школа</a></li>
-										<li><a href="event.html">Мероприятия</a></li>
-								   </ul>
-								</li>
-								<!-- <li><a class="disabled" href="photo-gallery.html">Галерея</a>
-								 <ul class="sub-menu">
-								   <li><a href="photo-gallery.html">Фотогалерея</a></li>
-								   <li><a href="video-gallery.html">Видеогалерея</a></li>
-								 </ul>
-								</li> -->
-								<!-- <li><a href="blog-category.html">Блог</a> -->
-									
-								</li>
+								<li class="menu-el"><a href="studio.html">Студия</a></li>
+								<li class="menu-el"><a href="school.html">Школа</a></li>
+								<li class="menu-el"><a href="event.html">Мероприятия</a></li>	
 								<li class="menu-el"><a href="conatct-us.html">Контакты</a></li>
 								<li>
 									<button type="button" data-toggle="modal" data-target="#callbackModal" class="triangle_btn">Заказать сейчас</button>
@@ -368,172 +359,7 @@ Author: Kamleshyadav
 	     </div> <!-- row -->
 	   </div> <!-- container -->
 	 </div><!--  wrapper -->
-	<!-- welcome section end -->
-	<!-- event section start -->
-	<div class="main_wrapper nc_event_wrapper">
-	 <div class="color_overlay">
-		<div class="container">
-			<div class="row">
-			<div class="col-lg-12">
-				<!-- middle heading start-->
-				<div class="nc_heading_middle">
-					<h2>
-						EVENTS OF THE MONTH
-					</h2>
-				</div>
-				<!-- middle heading end-->
-				<div class="nc_event_main event_crousel">
-					<!-- item start -->
-					<div class="item">
-					 <div class="nc_event_cover">
-						<div class="nc_thumb_wrapper">
-					      <img src="http://placehold.it/555x392" alt="">
-						    <!-- overlay start -->
-						  <div class="thumb_overlay triangle_shape">
-							<div class="book_now_button">
-							 <!-- <a href="#" class="nc_btns triangle_btn">book now</a> -->
-							 <a href="#" class="read_m_btn triangle_btn">book now</a>
-							</div>
-								<div class="overlay_inner_bottom">
-									<h4>Night Club</h4>
-									<p>There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour,
-									or randomised words which don't look even slightly believable.</p>
-								</div>
-						  </div>
-						   <!-- overlay end -->
-					    </div>
-						<div class="bottom_tab">
-							<span>25 Dec</span> <span>10:30 PM</span> <span>City Plaza, Newyork</span>
-						</div>
-				    </div><!-- event cover -->
-				</div> <!-- item end -->
-					<!-- item start -->
-					<div class="item">
-						<div class="nc_event_cover">
-							<div class="nc_thumb_wrapper">
-								<img src="http://placehold.it/555x392" alt="">
-								<!-- overlay start -->
-								<div class="thumb_overlay triangle_shape">
-									<div class="book_now_button">
-										<a href="#" class="read_m_btn triangle_btn">book now</a>
-									</div>
-									<div class="overlay_inner_bottom">
-										<h4>Night Club</h4>
-										<p>
-											Contrary to popular belief, Lorem Ipsum is not simply random text. It has roots in a piece of classical Latin literature from 45 BC, making it over 2000 years old. Richard McClintock, a Latin.
-										</p>
-									</div>
-								</div>
-								<!-- overlay end -->
-							</div>
-							<div class="bottom_tab">
-								<span>31 Dec</span> <span>10:30 PM</span> <span>Las Vegas, Nevada</span>
-							</div>
-						</div><!-- event cover -->
-					</div> <!-- item end -->
-					<!-- item start -->
-					<div class="item">
-						<div class="nc_event_cover">
-							<div class="nc_thumb_wrapper">
-								<img src="http://placehold.it/555x392" alt="">
-								<!-- overlay start -->
-								<div class="thumb_overlay triangle_shape">
-									<div class="book_now_button">
-										<a href="#" class="read_m_btn triangle_btn">book now</a>
-									</div>
-									<div class="overlay_inner_bottom">
-										<h4>Night Club</h4>
-										<p>
-											It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout. The point of using Lorem Ipsum is that it has a more-or-less normal distribution.
-									    </p>
-									</div>
-								</div>
-								<!-- overlay end -->
-							</div>
-							<div class="bottom_tab">
-								<span>25 Dec</span> <span>10:30 PM</span> <span>City Plaza, Newyork</span>
-							</div>
-						</div><!-- event cover -->
-					</div> <!-- item end -->
-					<!-- item start -->
-					<div class="item">
-						<div class="nc_event_cover">
-							<div class="nc_thumb_wrapper">
-								<img src="http://placehold.it/555x392" alt="">
-								<!-- overlay start -->
-								<div class="thumb_overlay triangle_shape">
-									<div class="book_now_button">
-										<a href="#" class="read_m_btn triangle_btn">book now</a>
-									</div>
-									<div class="overlay_inner_bottom">
-										<h4>Night Club</h4>
-										<p>There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour,
-										or randomised words which don't look even slightly believable.</p>
-									</div>
-								</div>
-								<!-- overlay end -->
-							</div>
-							<div class="bottom_tab">
-								<span>31 Dec</span> <span>10:30 PM</span> <span>Las Vegas, Nevada</span>
-							</div>
-						</div><!-- event cover -->
-					</div> <!-- item end -->
-					<!-- item start -->
-					<div class="item">
-						<div class="nc_event_cover">
-							<div class="nc_thumb_wrapper">
-								<img src="http://placehold.it/555x392" alt="">
-								<!-- overlay start -->
-								<div class="thumb_overlay triangle_shape">
-									<div class="book_now_button">
-										<a href="#" class="read_m_btn triangle_btn">book now</a>
-									</div>
-									<div class="overlay_inner_bottom">
-										<h4>Night Club</h4>
-										<p>
-											Contrary to popular belief, Lorem Ipsum is not simply random text. It has roots in a piece of classical Latin literature from 45 BC, making it over 2000 years old. Richard McClintock, a Latin.
-										</p>
-									</div>
-								</div>
-								<!-- overlay end -->
-							</div>
-							<div class="bottom_tab">
-								<span>25 Dec</span> <span>10:30 PM</span> <span>City Plaza, Newyork</span>
-							</div>
-						</div><!-- event cover -->
-					</div> <!-- item end -->
-					<!-- item start -->
-					<div class="item">
-						<div class="nc_event_cover">
-							<div class="nc_thumb_wrapper">
-								<img src="http://placehold.it/555x392" alt="">
-								<!-- overlay start -->
-								<div class="thumb_overlay triangle_shape">
-									<div class="book_now_button">
-										<a href="#" class="read_m_btn triangle_btn">book now</a>
-									</div>
-									<div class="overlay_inner_bottom">
-										<h4>Night Club</h4>
-										<p>
-											It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout. The point of using Lorem Ipsum is that it has a more-or-less normal distribution.
-									    </p>
-									</div>
-								</div>
-								<!-- overlay end -->
-							</div>
-							<div class="bottom_tab">
-								<span>31 Dec</span> <span>10:30 PM</span> <span>Las Vegas, Nevada</span>
-							</div>
-						</div><!-- event cover -->
-					</div> <!-- item end -->
-					<!-- item start -->
-			</div> <!-- event main -->
-		</div> <!-- col-lg-12 -->
-	 </div> <!--  row -->
-    </div><!--  container -->
-     </div><!--  color ovrlay --> 
-  </div><!--  main_wrapper -->
-<!-- event section end -->	
+	<!-- welcome section end -->	
 	   <!-- gallery section start -->
 	<div class="main_wrapper nc_gallery_wrapper">
 		<div class="nc_heading_middle">
