Add classes card

--- a/music.html
+++ b/music.html
@@ -240,6 +240,25 @@ Author: Kamleshyadav
   </div>
 </div>
 
+<div class="main_wrapper classes-section">
+    <div class="container">
+        <div class="row">
+          <div class="col-sm-12 card">
+            <div class="col-sm-6">
+              <i class="fa fa-male"></i>
+              <h3>ИНДИВИДУАЛЬНЫЕ</h3>
+              <p>Индивидуальный формат обучения — как all inclusive. Внимание преподавателя сконцентрировано исключительно на вас, установить, проконтролировать цели и определить необходимый темп работы можно самостоятельно, согласовав его с учителем, преподавателю можно задавать любые вопросы в любое время, не ожидая либо стесняясь других, практиковать с ним полученные навыки столько, сколько это будет необходимо.</p>
+            </div> 
+            <div class="col-sm-6">
+              <i class="fa fa-group"></i>
+              <h3>РАЗОВЫЕ</h3>
+              <p>Данный формат обучения будет полезен для тех, кто не определился до конца по поводу обучения, хочет попробовать еще раз, а также для тех, кто столкнулся с определнной проблемой в технике и др. Выбирая разовое занятие — вы получите ответы на интересующие вас вопросы либо познакомитесь с интрументом еще ближе и сделаете выбор по поводу постоянного обучения.</p>
+            </div> 
+          </div>
+        </div>
+    </div>
+</div>
+
 <div  class="main_wrapper nc_offers_section">
     <div class="container">
      <div class="row"> 
